WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223422
CSP headers can block default <video> controls
https://bugs.webkit.org/show_bug.cgi?id=223422
Summary
CSP headers can block default <video> controls
Devin Rousso
Reported
2021-03-18 00:52:27 PDT
.
Attachments
Patch
(2.76 KB, patch)
2021-03-18 01:00 PDT
,
Devin Rousso
graouts
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(2.76 KB, patch)
2021-03-18 11:15 PDT
,
Devin Rousso
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(3.59 KB, patch)
2021-03-18 20:09 PDT
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-03-18 00:52:39 PDT
<
rdar://problem/41192193
>
Devin Rousso
Comment 2
2021-03-18 01:00:37 PDT
Created
attachment 423569
[details]
Patch
EWS
Comment 3
2021-03-18 03:08:02 PDT
Comment hidden (obsolete)
Found 30 new test failures: compositing/video/video-object-fit.html, fast/canvas/webgl/texImage2D-video-flipY-true.html, http/tests/contentextensions/text-track-blocked.html, http/tests/inspector/network/resource-mime-type.html, http/tests/security/contentSecurityPolicy/report-only-connect-src-xmlhttprequest-redirect-to-blocked.php, media/modern-media-controls/css/cursor.html, media/modern-media-controls/css/pointer-events-none.html, media/modern-media-controls/css/transformed-media.html, media/modern-media-controls/css/webkit-cursor-visibility-auto-hide.html, media/modern-media-controls/macos-fullscreen-media-controls/macos-fullscreen-media-controls-drag-is-prevented-over-button.html ...
Devin Rousso
Comment 4
2021-03-18 11:15:07 PDT
Created
attachment 423620
[details]
Patch I'm pretty sure the test failures were due to not having
r274625
yet 🤔
EWS
Comment 5
2021-03-18 13:26:40 PDT
Committed
r274669
: <
https://commits.webkit.org/r274669
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423620
[details]
.
Aakash Jain
Comment 6
2021-03-18 15:55:10 PDT
(In reply to Devin Rousso from
comment #4
)
> I'm pretty sure the test failures were due to not having
r274625
yet 🤔
https://ews-build.webkit.org/#/builders/56/builds/3789
used
235479@main
(displayed in step 6) which is
r274654
.
https://ews-build.webkit.org/#/builders/60/builds/131
used
235476@main
which is
r274651
r274654
and
r274651
are after
r274625
. Please check. Also These tests are now crashing on post-commit bots too, e.g.:
https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=http%2Ftests%2Finspector%2Fnetwork%2Fresource-initiatorNode.html&test=http%2Ftests%2Finspector%2Fdom%2FdidFireEvent.html
WebKit Commit Bot
Comment 7
2021-03-18 16:37:54 PDT
Re-opened since this is blocked by
bug 223487
Devin Rousso
Comment 8
2021-03-18 20:09:47 PDT
Created
attachment 423685
[details]
Patch
EWS
Comment 9
2021-03-19 07:35:06 PDT
Committed
r274717
: <
https://commits.webkit.org/r274717
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 423685
[details]
.
Sam Sneddon [:gsnedders]
Comment 10
2022-02-14 19:06:11 PST
***
Bug 191782
has been marked as a duplicate of this bug. ***
Anne van Kesteren
Comment 11
2023-08-27 23:36:47 PDT
***
Bug 225865
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug