CSP headers can block default <video> controls https://bugs.webkit.org/show_bug.cgi?id=223422 <rdar://problem/41192193>

Reviewed by Antoine Quint.

Covered by existing tests.

* Modules/modern-media-controls/controls/icon-service.js:
(IconService.prototype.imageForIconAndLayoutTraits):
In order for an `<img>` to skip CSP checks it must be `isInUserAgentShadowTree` before setting `src`.

* Modules/modern-media-controls/main.js:
(createControls):
Provide the UA `shadowRoot` to the `iconService` so it can temporarily attach the `<img>`.

* dom/Element.cpp:
(WebCore::Element::addShadowRoot):
Web Inspector should be notified about new UA shadow roots before they're modified.


Canonical link: https://commits.webkit.org/235537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274717 268f45cc-cd09-0410-ab3c-d52691b4dbfc